update WIP march 23

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-3X6ECZ67FF');
+      {{/*  gtag('config', 'G-3X6ECZ67FF');  */}}
     </script>
-    <title>Tram Tran</title>
+    <title>Nhuong Hoang</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
